260102 update project