@@ -1,12 +1,16 @@
+// src/main/java/com/team/backend/service/clothing/ClothingItemService.java
 package com.team.backend.service.clothing;
 
-import com.team.backend.api.dto.clothingItem.*;
+import com.team.backend.api.dto.clothingItem.ClothingItemRequestDto;
+import com.team.backend.api.dto.clothingItem.ClothingItemResponseDto;
 import com.team.backend.domain.ClothingItem;
 import com.team.backend.domain.enums.ClothingCategory;
 import com.team.backend.repository.clothing.ClothingItemRepository;
 import jakarta.persistence.EntityNotFoundException;
+import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
-import org.springframework.data.domain.*;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -25,14 +29,13 @@ public class ClothingItemService {
     private final ClothingItemRepository clothingItemRepository;
 
     // ==============================
-    // Create
+    // Create: POST /api/clothes
     // ==============================
-    public ClothingItemResponseDto create(ClothingItemCreateRequestDto req) {
+    public ClothingItemResponseDto create(@Valid ClothingItemRequestDto.Create req) {
         if (req.getClothingId() == null) throw new IllegalArgumentException("clothingId는 필수입니다.");
         if (clothingItemRepository.existsByClothingId(req.getClothingId())) {
             throw new IllegalArgumentException("이미 존재하는 clothingId 입니다. clothingId=" + req.getClothingId());
         }
-
 
         ClothingItem entity = ClothingItem.builder()
                 .clothingId(req.getClothingId())
@@ -57,7 +60,7 @@ public class ClothingItemService {
     }
 
     // ==============================
-    // Read
+    // Read: GET /api/clothes/{id}
     // ==============================
     @Transactional(readOnly = true)
     public ClothingItemResponseDto getById(Long id) {
@@ -71,17 +74,19 @@ public class ClothingItemService {
     }
 
     // ==============================
-    // Update (PATCH)
+    // Update: PATCH /api/clothes/{id}
     // ==============================
-    public ClothingItemResponseDto update(Long id, ClothingItemUpdateRequestDto req) {
+    public ClothingItemResponseDto update(Long id, @Valid ClothingItemRequestDto.Update req) {
         ClothingItem e = clothingItemRepository.findById(id)
                 .orElseThrow(() -> new EntityNotFoundException("ClothingItem을 찾을 수 없습니다. id=" + id));
 
+        // 엔티티 메서드는 null이면 유지(PATCH) 전제로 구현되어 있어야 함
         e.updateCore(req.getName(), req.getCategory(), req.getThicknessLevel(), req.getUsageType());
         e.updateTempRange(req.getSuitableMinTemp(), req.getSuitableMaxTemp());
         e.updateMaterials(req.getCottonPercentage(), req.getPolyesterPercentage(), req.getEtcFiberPercentage());
         e.updateMeta(req.getColor(), req.getStyleTag(), req.getImageUrl());
 
+        // 시즌: null이면 미변경, 값 있으면 전체 교체
         if (req.getSeasons() != null) {
             e.replaceSeasons(req.getSeasons());
         }
@@ -90,7 +95,7 @@ public class ClothingItemService {
     }
 
     // ==============================
-    // Delete
+    // Delete: DELETE /api/clothes/{id}
     // ==============================
     public void delete(Long id) {
         if (!clothingItemRepository.existsById(id)) {
@@ -100,12 +105,12 @@ public class ClothingItemService {
     }
 
     // ==============================
-    // Search (옵션 A: clothingId를 search로 흡수)
-    // - clothingId 있으면 단건 조회
-    // - 아니면 후보 id만 먼저(Custom) → seasons 포함 재조회(EntityGraph)
+    // Search: GET /api/clothes/search
+    //  - clothingId 있으면 단건 조회
+    //  - 아니면 후보 id만 먼저(Custom) → seasons 포함 재조회(EntityGraph)
     // ==============================
     @Transactional(readOnly = true)
-    public List<ClothingItemResponseDto> search(ClothingItemSearchRequestDto req) {
+    public List<ClothingItemResponseDto> search(ClothingItemRequestDto.Search req) {
 
         // 1) clothingId 단건 조회 (비즈니스 키)
         if (req != null && req.getClothingId() != null) {
@@ -120,11 +125,19 @@ public class ClothingItemService {
             return List.of(ClothingItemResponseDto.from(e));
         }
 
-        // 2) 기존 검색 흐름 유지
-        int limit = (req == null ? DEFAULT_LIMIT : req.resolvedLimit());
-        Pageable pageable = PageRequest.of(0, clamp(limit));
+        // 2) 검색 흐름
+        int resolvedLimit = (req == null ? DEFAULT_LIMIT : req.resolvedLimit());
+        Pageable pageable = PageRequest.of(0, clamp(resolvedLimit));
 
-        List<Long> ids = clothingItemRepository.searchCandidateIds(req, pageable);
+        ClothingItemRequestDto.SearchCondition cond =
+                (req == null)
+                        ? ClothingItemRequestDto.SearchCondition.builder()
+                        .sort("popular")
+                        .limit(clamp(DEFAULT_LIMIT))
+                        .build()
+                        : req.toCondition();
+
+        List<Long> ids = clothingItemRepository.searchCandidateIds(cond, pageable);
         return fetchOrderedDtos(ids);
     }
 
@@ -154,7 +167,7 @@ public class ClothingItemService {
         return clothingItemRepository.findAllByOrderBySelectedCountDesc(pageable)
                 .stream()
                 .map(ClothingItemResponseDto::from)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional(readOnly = true)
@@ -164,11 +177,11 @@ public class ClothingItemService {
         return clothingItemRepository.findAllByCategoryOrderBySelectedCountDesc(category, pageable)
                 .stream()
                 .map(ClothingItemResponseDto::from)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     // ==============================
-    // SelectedCount (동시성 안전: update 쿼리)
+    // SelectedCount
     // ==============================
     public void markSelected(Long id) {
         int updated = clothingItemRepository.incrementSelectedCount(id);
